--- a/index.html
+++ b/index.html
@@ -2,41 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>W. Kellermann - Portfolio</title>
+    <title>Home - Toako Portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Chivo:300,700|Playfair+Display:700i" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="icon" href="res/logo-icon.png">
 </head>
 <body>
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top set-nav">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Portfolio</a>
+            <a class="navbar-brand" href="index.html">toako</a>
         </div>
         <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects
                     <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Project1</a></li>
-                    <li><a href="#">Project2</a></li>
-                    <li><a href="#">Project3</a></li>
+                    <li><a href="#">RE Scraper Test</a></li>
+                    <li><a href="#">Railers</a></li>
+                    <li><a href="#">Riddleman Mod</a></li>
                 </ul>
             </li>
-            <li><a href="#">About Me</a></li>
+            
+            <li><a href="#">About</a></li>
+            <li><a href="#">Gaming</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><p class="navbar-text">William Kellermann</p></li>
+            <li><a href="https://github.com/toako"><img src="res/github.png" width="20px" height="20px"></a></li>
         </ul>
     </div>
 </nav>
-<div class="container-fluid buffer-top area-title">
-    <h1 class="text-center">Computer Science Portfolio</h1>
-    <h2 class="text-center">William Kellermann</h2>
+<div class="container-fluid area-title">
+    <h1 class="text-center txt-1">Computer Science Portfolio</h1>
+    <h2 class="text-center txt-1">William Kellermann</h2>
 </div>
-
-
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
