--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
                     <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">RE Scraper Test</a></li>
-                    <li><a href="#">Railers</a></li>
-                    <li><a href="#">Riddleman Mod</a></li>
                 </ul>
             </li>
             
             <li><a href="#">About</a></li>
-            <li><a href="#">Gaming</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
@@ -37,13 +34,30 @@
         </ul>
     </div>
 </nav>
-<p>Test from webstorm</p>
 <div class="container-fluid area-title">
     <h1 class="text-center txt-1">Computer Science Portfolio</h1>
     <h2 class="text-center txt-1">William Kellermann</h2>
 </div>
+<div class="row container-fluid">
+    <div class="col-md-6">
+        <div class="thumbnail">
+            <div class="caption">
+                <h3>Thumbnail label</h3>
+                <p>...</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="thumbnail">
+            <div class="caption">
+                <h3>Thumbnail label</h3>
+                <p>...</p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </html>
