Some minimal changes to layout and thumbnails

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">RE Scraper Test</a></li>
+					<li><a href="#">Site Scraper</a></li>
                 </ul>
             </li>
             
@@ -42,16 +43,16 @@
     <div class="col-md-6">
         <div class="thumbnail">
             <div class="caption">
-                <h3>Thumbnail label</h3>
-                <p>...</p>
+                <h3 class="thumb-entry">The Portfolio</h3>
+                <p class="thumb-desc">Portfolio info goes here bla bla bla</p>
             </div>
         </div>
     </div>
     <div class="col-md-6">
         <div class="thumbnail">
             <div class="caption">
-                <h3>Thumbnail label</h3>
-                <p>...</p>
+                <h3 class="thumb-entry">What to Expect</h3>
+                <p class="thumb-desc">In the future you can expect bla bla bla</p>
             </div>
         </div>
     </div>
