--- a/index.html
+++ b/index.html
@@ -43,16 +43,18 @@
     <div class="col-md-6">
         <div class="thumbnail">
             <div class="caption">
-                <h3 class="thumb-entry">The Portfolio</h3>
-                <p class="thumb-desc">Portfolio info goes here bla bla bla</p>
+                <h3 class="thumb-entry">Portfolio</h3>
+                <p class="thumb-desc">This portfolio is my way to show off projects and tools as I move into college and the professional work-force.
+                The page is a collection of random stuff I've built over the years. Some of it may be outdated, riddled with bugs, etc.</p>
             </div>
         </div>
     </div>
     <div class="col-md-6">
         <div class="thumbnail">
             <div class="caption">
-                <h3 class="thumb-entry">What to Expect</h3>
-                <p class="thumb-desc">In the future you can expect bla bla bla</p>
+                <h3 class="thumb-entry">Current Project</h3>
+                <p class="thumb-desc">Currently, I'm working on a project called <span style="color: red;">Robo Command</span>, a 2D platformer about blasting robots.
+                    You can see the progess of the project <a>here</a>.</p>
             </div>
         </div>
     </div>
