--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="thumbnail">
             <div class="caption">
                 <h3 class="thumb-entry">Current Project</h3>
-                <p class="thumb-desc">Currently, I'm working on a project called <span style="color: red;">Robo Command</span>, a 2D platformer about blasting robots.
+                <p class="thumb-desc">Currently, I'm working on a project called <span> style="color: red;">Robo Command</span>, a 2D platformer about blasting robots.
                     You can see the progess of the project <a>here</a>.</p>
             </div>
         </div>
