Included more info while being more polished.

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home - Portfolio</title>
+    <title>About - Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Chivo:300,700|Playfair+Display:700i" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -24,7 +24,7 @@
                     <li><a href="#">Web Blocker Bypass</a></li>
                 </ul>
             </li>
-            
+
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -34,29 +34,27 @@
         </ul>
     </div>
 </nav>
-<div class="container-fluid area-title">
-    <h1 class="text-center txt-1">Computer Science Portfolio</h1>
-    <h2 class="text-center txt-1">William Kellermann</h2>
-</div>
-<div class="row container-fluid">
-    <div class="col-md-6">
-        <div class="thumbnail">
-            <div class="caption">
-                <h3 class="thumb-entry">Portfolio</h3>
-                <p class="thumb-desc">This portfolio is my way to show off projects and tools as I move into college and the professional workforce.
-                The page is a collection of random stuff I've built over the years. Some of it may be outdated, riddled with bugs, etc.</p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-6">
-        <div class="thumbnail">
-            <div class="caption">
-                <h3 class="thumb-entry">Current Project</h3>
-                <p class="thumb-desc">Currently, I'm working on an unnamed project which involves something along the line of a dungeon crawler with classes.
-            </div>
+<div class="thumb-container container-fluid">
+    <div class="thumbnail" style="border-color: #ff5900;">
+        <div class="caption">
+            <h3 class="about-title">About Me</h3>
+            <p class="thumb-desc" style="text-align: left;"><span class="para-intro">Brief:</span> Hi! My name is Will. I'm a proud
+                computer nerd with a love for coding, computer hardware, and video games. My life revolves around the computer, in some way or another. I have a lot of interests, so finding the time
+                to sit down and grind out code can be difficult. It usually comes to me in waves, and I'll get an urge to work on a project, either because I feel like it or because of guilt for not coding.
+            </p>
+            <p class="thumb-desc" style="text-align: left;"><span class="para-intro">What I Know:</span> There's a lot of stuff that I've dabbled in at some point. I've tried a lot of OO languages as well
+                as a little bit of markup and databases. The languages I know best are Java and C#. Languages I've dabbled with a little bit of Python, JS, BASIC, and C. I've got a fairly good grasp of HTML
+                and CSS. Most of my work is done in Unity, which is a free game engine. No, I don't release half-baked crap that has a Unity watermark on it! This explains why I spend most of my time in C#.
+            </p>
+            <p class="thumb-desc" style="text-align: left;"><span class="para-intro">Education:</span> I've been in Computer Science classes since freshman year, and have taken courses through Boise State
+                University. I will be a freshman at BSU next year, but I will be in my 200 classes for Computer Science.
+            </p>
         </div>
     </div>
 </div>
+
+
+
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
