--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home - Portfolio</title>
+    <title>Contact - Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Chivo:300,700|Playfair+Display:700i" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -24,7 +24,7 @@
                     <li><a href="#">Web Blocker Bypass</a></li>
                 </ul>
             </li>
-            
+
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -34,29 +34,19 @@
         </ul>
     </div>
 </nav>
-<div class="container-fluid area-title">
-    <h1 class="text-center txt-1">Computer Science Portfolio</h1>
-    <h2 class="text-center txt-1">William Kellermann</h2>
-</div>
-<div class="row container-fluid">
-    <div class="col-md-6">
-        <div class="thumbnail">
-            <div class="caption">
-                <h3 class="thumb-entry">Portfolio</h3>
-                <p class="thumb-desc">This portfolio is my way to show off projects and tools as I move into college and the professional workforce.
-                The page is a collection of random stuff I've built over the years. Some of it may be outdated, riddled with bugs, etc.</p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-6">
-        <div class="thumbnail">
-            <div class="caption">
-                <h3 class="thumb-entry">Current Project</h3>
-                <p class="thumb-desc">Currently, I'm working on an unnamed project which involves something along the line of a dungeon crawler with classes.
-            </div>
+<div class="thumb-container container-fluid">
+    <div class="thumbnail" style="border-color: #ff5900;">
+        <div class="caption">
+            <h3 class="about-title">Contact</h3>
+            <p class="thumb-desc" style="text-align: left;"><span class="para-intro">Available at:</span> The best times to contact me are after 10:00 AM on the weekends, or after 5:00 PM on the weekdays.</p>
+            <p class="thumb-desc" style="text-align: left;"><span class="para-intro">Phone:</span> (208) 392-0286</p>
+            <p class="thumb-desc" style="text-align: left;"><span class="para-intro">E-Mail:</span> williamebk@yahoo.com</p>
         </div>
     </div>
 </div>
+
+
+
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
